--- a/package.json
+++ b/package.json
@@ -41,15 +41,17 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "latest",
+    "argon2": "^0.41.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "crystals-kyber-js": "^2.3.1",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "next-themes": "latest",
     "react": "^18",
     "react-day-picker": "8.10.1",
