--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+web/node_modules
+desktop/node_modules
 
 # next.js
 /.next/
@@ -17,7 +18,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-.env*
+web/.env
 
 # vercel
 .vercel
