--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,9 +15,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^5.0.1",
         "@types/node": "^20.11.24",
         "@types/react": "^18.2.61",
         "@types/react-dom": "^18.2.19",
+        "@types/cors": "^2.8.17",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
         "concurrently": "^8.2.2",
@@ -30,6 +32,8 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
