--- a/desktop/package.json
+++ b/desktop/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "electron .",
         "dev": "concurrently \"npm run start\" \"npm run watch\"",
-        "build": "tsc && webpack --config webpack.main.config.js && webpack --config webpack.renderer.config.js",
+        "build": "rimraf dist && tsc && webpack --config webpack.main.config.js && webpack --config webpack.renderer.config.js",
         "watch": "tsc -w",
         "lint": "eslint -c .eslintrc --ext .ts,.tsx ./src",
         "pack": "electron-builder --dir",
@@ -15,25 +15,26 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^5.0.1",
         "@types/node": "^20.11.24",
         "@types/react": "^18.2.61",
         "@types/react-dom": "^18.2.19",
-        "@types/cors": "^2.8.17",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
         "concurrently": "^8.2.2",
+        "copy-webpack-plugin": "^12.0.2",
+        "css-loader": "^6.10.0",
         "electron": "^29.1.0",
         "electron-builder": "^24.12.0",
         "eslint": "^8.57.0",
+        "html-webpack-plugin": "^5.6.0",
+        "rimraf": "^5.0.5",
+        "style-loader": "^3.3.4",
         "ts-loader": "^9.5.1",
         "typescript": "^5.3.3",
         "webpack": "^5.90.3",
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.21.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -48,13 +49,22 @@
             "package.json"
         ],
         "win": {
-            "target": "nsis"
+            "target": "nsis",
+            "icon": "build/icon.ico"
         },
         "mac": {
-            "target": "dmg"
+            "target": "dmg",
+            "icon": "build/icon.icns"
         },
         "linux": {
-            "target": "AppImage"
+            "target": "AppImage",
+            "icon": "build/icon.png"
+        },
+        "nsis": {
+            "oneClick": false,
+            "allowToChangeInstallationDirectory": true,
+            "createDesktopShortcut": true,
+            "createStartMenuShortcut": true
         }
     }
 }
