--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -17,14 +17,15 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
+        "noEmit": false,
         "jsx": "react-jsx",
         "baseUrl": ".",
         "paths": {
             "@/*": [
                 "src/*"
             ]
-        }
+        },
+        "outDir": "dist"
     },
     "include": [
         "src/**/*"
