--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+project/node_modules
+project/.env
+
 # dependencies
 web/node_modules
 desktop/node_modules
