--- a/desktop/package.json
+++ b/desktop/package.json
@@ -35,6 +35,8 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.775.0",
+        "@aws-sdk/lib-dynamodb": "^3.775.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
