--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -28,7 +28,8 @@
         "outDir": "dist"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "global.d.ts"
     ],
     "exclude": [
         "node_modules"
