--- a/desktop/package.json
+++ b/desktop/package.json
@@ -39,6 +39,7 @@
         "@aws-sdk/lib-dynamodb": "^3.775.0",
         "argon2": "^0.41.1",
         "crystals-kyber-js": "^2.3.1",
+        "electron-store": "^10.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
